--- a/CJL vue/index.html
+++ b/CJL vue/index.html
@@ -2,13 +2,14 @@
 <html lang="">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/logocjl.png" type="image/png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <title>Vite App</title>
+    <title>Consultoria CLJ</title>
   </head>
   <body>
     <div id="app"></div>
